--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "lodash": "^4.17.20",
     "papaparse": "^5.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.1.0",
     "react-scripts": "3.4.3",
+    "react-select": "^3.1.0",
     "react-step-progress": "^1.0.3",
     "react-step-wizard": "^5.3.4"
   },
