--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.1.0",
+    "react-json-grid": "^1.0.31",
     "react-scripts": "3.4.3",
     "react-select": "^3.1.0",
     "react-step-progress": "^1.0.3",
